[tool.poetry]
name = "form-web-service"
version = "0.1.0"
description = ""
authors = ["Kim Sergey <sergkim7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
mypy = "^1.7.0"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
