[tool.poetry]
name = "form-web-service"
version = "0.1.0"
description = ""
authors = ["Kim Sergey <sergkim7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
mypy = "^1.7.0"
flake8 = "^6.1.0"
motor = "^3.3.1"
pydantic-settings = "^2.0.3"
itsdangerous = "^2.1.2"
email-validator = "^2.1.0.post1"
aiohttp = "^3.8.6"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
